--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,11 +4,11 @@ Django==5.0.6
 django-cors-headers==4.4.0
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
-# dlib==19.24.6
-# face-recognition==1.3.0
-# face_recognition_models==0.3.0
+dlib==19.24.6
+face-recognition==1.3.0
+face_recognition_models==0.3.0
 mysqlclient==2.2.4
-# numpy==2.1.2
+numpy==2.1.2
 pillow==11.0.0
 python-decouple==3.8
 sqlparse==0.5.0
