--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,7 +9,8 @@ face-recognition==1.3.0
 face_recognition_models==0.3.0
 mysqlclient==2.2.4
 numpy==2.1.2
-# pillow==11.0.0
+opencv-python==4.10.0.84
+pillow==11.0.0
 python-decouple==3.8
 sqlparse==0.5.0
 typing_extensions==4.12.2
