--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "prettier": "3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.21.0",
     "vue-tsc": "^2.0.6"
   }
 }
